--- a/yein-narayana-resume.tex
+++ b/yein-narayana-resume.tex
@@ -111,7 +111,7 @@ right=2.5cm
 \end{itemize}
 
 \subsection{AVANA - Social Commerce \& Web Builder}
-\subsubsection{DevOps Engineer | Mar 2018 - Sep 2021 \hfill Malaysia, Remote}
+\subsubsection{Frontend Engineer | Mar 2018 - Sep 2021 \hfill Malaysia, Remote}
 \begin{itemize}
     \item Tech Stack: Reactjs, Nextjs
     \item At AVANA, Me and the team successfully migrate of our legacy dashboard and detach the main application from symphony (php framework) to single page application powered by reactjs.
